--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/Dialogs/LekarskoUverenjeDialogPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/Dialogs/LekarskoUverenjeDialogPage.xaml
@@ -37,16 +37,18 @@
                 HorizontalOptions="FillAndExpand"
                 Orientation="Horizontal">
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="4*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                    <Grid.Style>
+                        <Style TargetType="Grid">
+                            <Setter Property="ColumnDefinitions" Value="{StaticResource Grid2CNormal251}" />
+                        </Style>
+                    </Grid.Style>
                     <Label
                         Grid.Column="0"
                         Margin="100,0,0,0"
                         HorizontalOptions="Center"
+                        LineBreakMode="NoWrap"
                         Style="{StaticResource MediumLabelStyle}"
-                        Text="Lekarsko uverenje"
+                        Text="Uverenje"
                         TextColor="{StaticResource LightSmokeWhite}"
                         VerticalOptions="Center" />
 
