--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/RegisterPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/RegisterPage.xaml
@@ -11,10 +11,10 @@
     mc:Ignorable="d">
     <ContentPage.Content>
         <ScrollView>
-            <Grid BackgroundColor="{StaticResource LighterSmokeWhite}">
+            <Grid Padding="0,0,0,30" BackgroundColor="{StaticResource LighterSmokeWhite}">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
                     <RowDefinition Height="2*" />
+                    <RowDefinition Height="5*" />
                 </Grid.RowDefinitions>
                 <StackLayout
                     Grid.Row="0"
@@ -32,7 +32,7 @@
                                 Text="Registracija" />
                         </StackLayout>
                         <Grid VerticalOptions="FillAndExpand">
-                            <Path Style="{StaticResource LogoPath}" />
+                            <Path Aspect="UniformToFill" Style="{StaticResource LogoPath}" />
                             <Image Style="{StaticResource LogoImage}" />
                         </Grid>
                     </Grid>
