--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/ChangePasswordPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/ChangePasswordPage.xaml
@@ -1,15 +1,80 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="Healthcare020.Mobile.Views.ChangePasswordPage">
+<views:BaseValidationContentPage
+    x:Class="Healthcare020.Mobile.Views.ChangePasswordPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:resources="clr-namespace:Healthcare020.Mobile.Resources;assembly=Healthcare020.Mobile"
+    xmlns:views="clr-namespace:Healthcare020.Mobile.Views;assembly=Healthcare020.Mobile"
+    BackgroundColor="White"
+    mc:Ignorable="d">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <Frame
+                x:Name="AnimationFrame"
+                BackgroundColor="White"
+                HasShadow="False"
+                HorizontalOptions="FillAndExpand"
+                IsVisible="{Binding MainBodyVisible, Converter={StaticResource OppositeBooleanConverter}}"
+                VerticalOptions="FillAndExpand">
+                <forms:AnimationView
+                    x:Name="MainAnimation"
+                    Animation="{StaticResource KeyAnimationPath}"
+                    HorizontalOptions="CenterAndExpand"
+                    IsPlaying="True"
+                    Loop="True"
+                    Speed="3"
+                    VerticalOptions="CenterAndExpand" />
+            </Frame>
+            <Grid Padding="20" IsVisible="{Binding MainBodyVisible}">
+                <Grid.Resources>
+                    <Style BasedOn="{StaticResource CustomEntry}" TargetType="Entry">
+                        <Setter Property="Margin">0,15,0,0</Setter>
+                    </Style>
+                    <Style BasedOn="{StaticResource CustomValidationLabel}" TargetType="Label" />
+                </Grid.Resources>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="2*" />
+                </Grid.RowDefinitions>
+                <Image
+                    Aspect="AspectFill"
+                    HorizontalOptions="CenterAndExpand"
+                    Source="{StaticResource SecurityImageSource}"
+                    VerticalOptions="CenterAndExpand" />
+
+                <StackLayout Grid.Row="1" Padding="40,10">
+                    <StackLayout x:Name="FormBody">
+                        <Entry
+                            ClassId="OldPassword"
+                            IsPassword="True"
+                            Placeholder="{x:Static resources:AppResources.OldPassword}"
+                            Text="{Binding OldPassword}" />
+                        <Label x:Name="OldPasswordValidation" />
+
+                        <Entry
+                            ClassId="NewPassword"
+                            IsPassword="True"
+                            Placeholder="{x:Static resources:AppResources.NewPassword}"
+                            Text="{Binding NewPassword}" />
+                        <Label x:Name="NewPasswordValidation" />
+
+                        <Entry
+                            ClassId="NewPasswordConfirm"
+                            IsPassword="True"
+                            Placeholder="{x:Static resources:AppResources.PasswordConfirmation}"
+                            Text="{Binding NewPasswordConfirm}" />
+                        <Label x:Name="NewPasswordConfirmValidation" />
+                        <Button
+                            x:Name="ChangePasswordBtn"
+                            Clicked="ChangePasswordBtn_OnClicked"
+                            Style="{StaticResource CustomButtonStyle}"
+                            Text="{x:Static resources:AppResources.Confirm}" />
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</views:BaseValidationContentPage>
